--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,17 +4,17 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Login</title>
+    <title>Login with passport</title>
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 
 
-<form id="sign-up-form" class="align" method="post" action="/register">
+<form id="login-form" class="align" method="post" action="/login">
     <img src="img/ic_face.svg" class="big-icon">
     <div class="form-field">
-        <label for="login-username">
+        <label for="username">
             <img class="small-icon" src="img/ic_user.svg">
         </label>
         <input id="username" type="text" name="username" class="form-input" placeholder="Username" required>
@@ -28,14 +28,8 @@
     </div>
 
     <div class="form-field">
-            <label for="password">
-                <img class="small-icon" src="img/ic_password.svg">
-            </label>
-            <input id="repeat-password" type="password" name="repreat-password" class="form-input" placeholder="Repeat-Password" required>
-        </div>
-
-    <div class="form-field">
-        <input type="submit" class="form-input" value="Register">
+        <input type="submit" class="form-input" value="Sign In">
     </div>
 </form>
 
+<p class="text-center">Not a member? <a href="/register">Sign up now</a>
